--- a/src/racadauto/Ajustar_item.form
+++ b/src/racadauto/Ajustar_item.form
@@ -71,7 +71,7 @@
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="JT_rut" min="-2" pref="125" max="-2" attributes="0"/>
+                              <Component id="LBL_rut" min="-2" pref="125" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -109,13 +109,11 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                      <Component id="lblEstado" alignment="1" min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="JT_rut" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblEstado" alignment="1" min="-2" pref="20" max="-2" attributes="0"/>
+                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="LBL_rut" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -266,8 +264,6 @@
         <Property name="text" type="java.lang.String" value="Rut Trabajador:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="JT_rut">
-    </Component>
     <Component class="javax.swing.JTextField" name="JT_nombre">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -346,6 +342,8 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JT_vventaActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="JT_vventaKeyTyped"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="LBL_rut">
     </Component>
   </SubComponents>
 </Form>
