--- a/src/racadauto/Facturar_OT.form
+++ b/src/racadauto/Facturar_OT.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -81,12 +81,14 @@
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="JT_codigo" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="JT_patente" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="JT_subtotal" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="JT_total" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="JT_trabajador" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="JT_codigo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="JT_subtotal" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="JT_total" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="JT_trabajador" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="196" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
